<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="24dp">


    <ImageView
        android:id="@+id/signup_photo"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:src="@drawable/signindesign"
        android:cropToPadding="true"
        android:scaleType="centerInside"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:src="@drawable/peer4ulogo"
        android:cropToPadding="true"
        android:scaleType="centerInside"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        android:textStyle="bold"
        android:text="@string/sign_in" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <ImageButton
            android:id="@+id/google_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/google_icon" />
        <Button
            android:id="@+id/google_signin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/google_signin"
            android:background="@color/google"
            android:textColor="@color/white"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <ImageButton
            android:id="@+id/microsoft_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/microsoft_icon" />
        <Button
            android:id="@+id/microsoft_signin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/microsoft_signin"
            android:background="@color/microsoft"
            android:textColor="@color/white"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_label" />
        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:background="@android:color/transparent"
            android:textColor="@color/mint" />
    </LinearLayout>

    <Button
        android:id="@+id/admin_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/admin"
        android:background="@android:color/transparent" />
</LinearLayout>