<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">

    <ImageView
        android:id="@+id/group_photo"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/default_group_photo"
        android:cropToPadding="true"
        android:scaleType="centerInside"
        android:layout_gravity="center"/>
    <ImageButton
        android:id="@+id/group_photo_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@android:drawable/ic_menu_camera"
        android:layout_gravity="center"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/group_name_text"/>
    <EditText
        android:id="@+id/group_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/group_name_hint" />

    <Button
        android:id="@+id/group_done_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/done"/>
</LinearLayout>