<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_weight="1"
            android:scaleType="center"
            android:text="@string/group_name_text" />

        <TextView
            android:id="@+id/group_name_text"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_weight="1"
            android:scaleType="center" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:scaleType="center"
            android:text="@string/project_name_text" />

        <TextView
            android:id="@+id/project_name_text"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:scaleType="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:scaleType="center"
            android:text="@string/group_leader_text" />

        <TextView
            android:id="@+id/leader_name_text"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:scaleType="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:scaleType="center"
            android:text="@string/group_members" />

        <TextView
            android:id="@+id/members_name_text"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:scaleType="center" />
    </LinearLayout>

</LinearLayout>