<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="24dp">


    <ImageView
        android:id="@+id/signup_chatbox_photo"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:src="@drawable/chatboxlogo"
        android:cropToPadding="true"
        android:scaleType="centerInside"/>
    <ImageView
        android:id="@+id/signup_students_photo"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:src="@drawable/studentscartoon"
        android:cropToPadding="true"
        android:scaleType="centerInside"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <ImageButton
            android:id="@+id/google_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/google_icon" />
        <Button
            android:id="@+id/google_signup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/google_signup"
            android:background="@color/google"
            android:textColor="@color/white"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <ImageButton
            android:id="@+id/microsoft_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/microsoft_icon" />
        <Button
            android:id="@+id/microsoft_signup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/microsoft_signup"
            android:background="@color/microsoft"
            android:textColor="@color/white"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_label" />
        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:background="@android:color/transparent"
            android:textColor="@color/mint" />
    </LinearLayout>
    <ImageView
        android:id="@+id/signup_peer4u_logo"
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/peer4ulogo"
        android:layout_gravity="center"/>
</LinearLayout>