<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/student_profilepic"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/default_profile_photo"
            android:cropToPadding="true"
            android:scaleType="centerInside"
            android:layout_margin="5dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/student_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:layout_margin="5dp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/student_university"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                android:layout_margin="5dp"/>

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/project_name"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/create_group_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/create_group_button"
            android:background="@drawable/roundbutton"
            android:layout_margin="10dp"/>
        <Button
            android:id="@+id/join_group_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/join_group_button"
            android:background="@drawable/roundbutton"
            android:layout_margin="10dp"/>
    </LinearLayout>
    <Button
        android:id="@+id/invite_member_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/invite_members_button"
        android:background="@drawable/roundbutton"
        android:layout_margin="10dp"
        android:padding="10dp"/>
    <Button
        android:id="@+id/leave_group_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/leave_group_button"
        android:background="@drawable/roundbutton"
        android:layout_margin="10dp"
        android:padding="10dp"/>
    <TextView
        android:id="@+id/project_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/group_members"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"/>
    <TextView
        android:id="@+id/group_members"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/google"
        android:textSize="16sp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"/>

</LinearLayout>